[tool.ruff]
lint.ignore = ["E501", "E402" ,"F401", "F811"]
lint.select = ["NPY201"]

exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "migrations",
    "src",
]

line-length = 120

[tool.black]

line-length = 120

target-version = ['py311', 'py312', 'py313', 'py314']

extend-exclude = '''
(
    .*.bzr
    |.*.direnv
    |.*.eggs
    |.*.git
    |.*.hg
    |.*.mypy_cache
    |.*.nox
    |.*.pants.d
    |.*.pytype
    |.*.ruff_cache
    |.*.svn
    |.*.tox
    |.*.venv
    |__pypackages__
    |_build
    |.*buck-out
    |build
    |dist
    |node_modules
    |venv
    |migrations
    |src
)
'''

[project]
name = "pandagallery"
version = "0.0.1"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4==4.14.2",
    "cherrypy==18.10.0",
    "deckar01-ratelimit==3.0.2",
    "django==5.2.8",
    "django-autocomplete-light==3.12.1",
    "django-compressor==4.6.0",
    "django-cors-headers==4.9.0",
    "django-db-logger==0.1.13",
    "django-simple-history==3.10.1",
    "django-vite==3.1.0",
    "elasticsearch==8.18.1",
    "feedparser==6.0.12",
    "imagehash==4.3.2",
    "numpy==2.3.4",
    "pillow==12.0.0",
    "psycopg==3.2.12",
    "psycopg-binary==3.2.12; sys_platform == 'win32'",
    "py7zr==1.0.0",
    "pysocks==1.7.1",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "pyyaml==6.0.3",
    "rarfile==4.2",
    "requests==2.32.5",
    "transmission-rpc==7.0.11",
    "twitter==1.19.6",
]

[dependency-groups]
dev = [
    "django-debug-toolbar==6.1.0",
    "django-stubs==5.2.7",
    "django-unused-media==0.2.2",
    "mypy==1.18.2",
    "ruff==0.14.5",
    "types-python-dateutil==2.9.0.20251115",
    "types-pytz==2025.2.0.20251108",
    "types-requests==2.32.4.20250913",
]

ci = [
    "mypy==1.18.2",
    "ruff==0.14.5",
    "django-stubs==5.2.7",
    "types-requests==2.32.4.20250913",
    "types-pytz==2025.2.0.20251108",
    "types-python-dateutil==2.9.0.20251115",
    "unittest-xml-reporting==3.2.0",
]
