[tool.ruff]
lint.ignore = ["E501", "E402" ,"F401", "F811"]
lint.select = ["NPY201"]

exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "migrations",
    "src",
]

line-length = 120

[tool.black]

line-length = 120

target-version = ['py312', 'py313', 'py314']

extend-exclude = '''
(
    .*.bzr
    |.*.direnv
    |.*.eggs
    |.*.git
    |.*.hg
    |.*.mypy_cache
    |.*.nox
    |.*.pants.d
    |.*.pytype
    |.*.ruff_cache
    |.*.svn
    |.*.tox
    |.*.venv
    |__pypackages__
    |_build
    |.*buck-out
    |build
    |dist
    |node_modules
    |venv
    |migrations
    |src
)
'''

[project]
name = "pandagallery"
version = "0.0.1"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4==4.14.3",
    "cherrypy==18.10.0",
    "deckar01-ratelimit==3.0.2",
    "django==6.0.2",
    "django-autocomplete-light==3.12.1",
    "django-compressor==4.6.0",
    "django-cors-headers==4.9.0",
    "django-db-logger==0.1.13",
    "django-simple-history==3.11.0",
    "django-vite==3.1.0",
    "elasticsearch==8.18.1",
    "feedparser==6.0.12",
    "imagehash==4.3.2",
    "numpy==2.4.2",
    "pillow==12.1.0",
    "psycopg==3.3.2",
    "psycopg-binary==3.3.2; sys_platform == 'win32'",
    "py7zr==1.1.2",
    "pysocks==1.7.1",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "pyyaml==6.0.3",
    "rarfile==4.2",
    "requests==2.32.5",
    "transmission-rpc==7.0.11",
    "twitter==1.19.6",
]

[dependency-groups]
dev = [
    "django-debug-toolbar==6.2.0",
    "django-stubs==5.2.9",
    "django-unused-media==0.2.2",
    "mypy==1.19.1",
    "ruff==0.15.0",
    "types-python-dateutil==2.9.0.20260124",
    "types-pytz==2025.2.0.20251108",
    "types-requests==2.32.4.20260107",
]

ci = [
    "mypy==1.19.1",
    "ruff==0.15.0",
    "django-stubs==5.2.9",
    "types-requests==2.32.4.20260107",
    "types-pytz==2025.2.0.20251108",
    "types-python-dateutil==2.9.0.20260124",
    "unittest-xml-reporting==4.0.0",
]
