[tool.ruff]
lint.ignore = ["E501", "E402" ,"F401", "F811"]
lint.select = ["NPY201"]

exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "migrations",
    "src",
]

line-length = 120

[tool.black]

line-length = 120

target-version = ['py312', 'py313', 'py314']

extend-exclude = '''
(
    .*.bzr
    |.*.direnv
    |.*.eggs
    |.*.git
    |.*.hg
    |.*.mypy_cache
    |.*.nox
    |.*.pants.d
    |.*.pytype
    |.*.ruff_cache
    |.*.svn
    |.*.tox
    |.*.venv
    |__pypackages__
    |_build
    |.*buck-out
    |build
    |dist
    |node_modules
    |venv
    |migrations
    |src
)
'''

[project]
name = "pandagallery"
version = "0.0.1"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4==4.14.3",
    "cherrypy==18.10.0",
    "deckar01-ratelimit==3.0.2",
    "django==6.0.4",
    "django-autocomplete-light==3.12.1",
    "django-compressor==4.6.0",
    "django-cors-headers==4.9.0",
    "django-db-logger==0.1.13",
    "django-simple-history==3.11.0",
    "django-vite==3.1.0",
    "elasticsearch==8.18.1",
    "feedparser==6.0.12",
    "imagehash==4.3.2",
    "numpy==2.4.4",
    "pillow==12.2.0",
    "psycopg==3.3.3",
    "psycopg-binary==3.3.3; sys_platform == 'win32'",
    "py7zr==1.1.2",
    "pysocks==1.7.1",
    "python-dateutil==2.9.0.post0",
    "pytz==2026.1.post1",
    "pyyaml==6.0.3",
    "rarfile==4.2",
    "requests==2.33.1",
    "transmission-rpc==7.0.11",
    "twitter==1.19.6",
]

[dependency-groups]
dev = [
    "django-debug-toolbar==6.3.0",
    "django-stubs==6.0.3",
    "django-unused-media==0.2.2",
    "mypy==1.20.1",
    "ruff==0.15.11",
    "types-python-dateutil==2.9.0.20260408",
    "types-pytz==2026.1.1.20260408",
    "types-requests==2.33.0.20260408",
]

ci = [
    "mypy==1.20.1",
    "ruff==0.15.11",
    "django-stubs==6.0.3",
    "types-requests==2.33.0.20260408",
    "types-pytz==2026.1.1.20260408",
    "types-python-dateutil==2.9.0.20260408",
    "unittest-xml-reporting==4.0.0",
]
